--- a/docs/v3.md
+++ b/docs/v3.md
@@ -16,9 +16,9 @@
 
 本ライブラリは、その根幹に以下の三つの哲学を置く。
 
-1.  **信頼性 (Reliability):** 全ての関数は、厳格な**テスト駆動開発**によってその正しさが保証される。テストが存在しないコードは、存在しないのと同じである。
-2.  **持続可能性 (Sustainability):** コードは書かれる時間より、読まれ、修正され、拡張される時間の方が圧倒的に長い。我々は、未来の開発者（1年後の自分自身を含む）のために、**可読性**と**保守性**を最高レベルに保つ。
-3.  **人間中心設計 (Human-Centered Design):** ライブラリは、開発者が複雑な数値演算の実装詳細を意識することなく、本来の目的に集中できる、直感的で安全なツールでなければならない。
+1. **信頼性 (Reliability):** 全ての関数は、厳格な**テスト駆動開発**によってその正しさが保証される。テストが存在しないコードは、存在しないのと同じである。
+2. **持続可能性 (Sustainability):** コードは書かれる時間より、読まれ、修正され、拡張される時間の方が圧倒的に長い。我々は、未来の開発者（1年後の自分自身を含む）のために、**可読性**と**保守性**を最高レベルに保つ。
+3. **人間中心設計 (Human-Centered Design):** ライブラリは、開発者が複雑な数値演算の実装詳細を意識することなく、本来の目的に集中できる、直感的で安全なツールでなければならない。
 
 ##### **1.3. バージョン3.0の定義**
 
@@ -40,10 +40,10 @@
 
 ##### **2.2. アーキテクチャの三大原則**
 
-1.  **原則1：ヘルパー関数の完全な排除**
+1. **原則1：ヘルパー関数の完全な排除**
     ライブラリに「ヘルパー」という曖昧な概念は存在しない。`two_sum`のような関数であっても、それは`qp_add`の補助ではなく、**誤差なし変換という明確な責務を持つ独立したプリミティブ**である。すべてのコード片は、固有のテストスイートを持つ公式な関数モジュールとして扱われなければならない。
 
-2.  **原則2：依存関係の明示的宣言**
+2. **原則2：依存関係の明示的宣言**
     ある関数`A`が別の関数`B`を内部で利用する場合、`A`は`B`に**依存する**。この依存関係は、関数`A`の`index.ts`ファイル内に、`dependencies`配列として明示的に宣言されなければならない。
 
     ```typescript
@@ -56,7 +56,7 @@
 
     テストフレームワークは、この宣言を読み取り、実行時に必要なWGSLコードを\*\*自動的に結合（concatenate）\*\*する責務を負う。これにより、WGSLに`import`機能がないという制約を克服し、コードの再利用性と保守性を最大化する。
 
-3.  **原則3：依存関係による階層の自動決定**
+3. **原則3：依存関係による階層の自動決定**
     ライブラリの`LV`（レベル）階層は、ファッションではなく、依存関係の論理構造によって**必然的に決定される**。被依存関数は、常に依存する関数よりも下位のレベルに配置されなければならない。これにより、「信頼性の階層モデル」 がコードのディレクトリ構造そのものに反映される。
 
 ##### **2.3. 未知のプリミティブの発見プロセス**
@@ -75,11 +75,11 @@
 $$\sin(x) = x - \frac{x^3}{3!} + \frac{x^5}{5!} - \frac{x^7}{7!} + \dots$$
 この計算を`QuadFloat`で実行するには、以下の処理がループ内で何度も繰り返される。
 
-1.  `x`のべき乗 (`x^3`, `x^5`, ...) を計算する (`qp_mul`)
-2.  階乗 (`3!`, `5!`, ...) を計算する (`qp_mul`)
-3.  べき乗を階乗で割る (`qp_div`)
-4.  符号を反転させながら足し合わせる (`qp_add`, `qp_sub`)
-5.  **収束判定:** 前のステップの結果との差が、許容誤差`epsilon`より小さくなったか？
+1. `x`のべき乗 (`x^3`, `x^5`, ...) を計算する (`qp_mul`)
+2. 階乗 (`3!`, `5!`, ...) を計算する (`qp_mul`)
+3. べき乗を階乗で割る (`qp_div`)
+4. 符号を反転させながら足し合わせる (`qp_add`, `qp_sub`)
+5. **収束判定:** 前のステップの結果との差が、許容誤差`epsilon`より小さくなったか？
 
 このステップ5 \*\*「収束判定」\*\*こそが、新たな被依存関数の需要源である。単純な`a == b`では浮動小数点数の比較はできない。我々が必要とするのは、**許容誤差を考慮した比較**、つまり`abs(a - b) < epsilon`という演算である。この演算は、`qp_sin`だけでなく、反復法を用いるあらゆる関数で共通して必要となる、新たなプリミティブなのである。
 
@@ -87,10 +87,10 @@ $$\sin(x) = x - \frac{x^3}{3!} + \frac{x^5}{5!} - \frac{x^7}{7!} + \dots$$
 
 `LV4`の`qp_sin`を実装する過程で、もし新たな共通処理（例：`qp_abs`や`qp_eq_eps`）が必要だと判明した場合、開発者は以下のプロセスを**必ず**踏まなければならない。
 
-1.  その共通処理を、適切なレベル（例：`LV3`）の**新しい独立した関数モジュール**として定義する。
-2.  その新関数のためのテストケースと神託（Oracle）を実装する。
-3.  TDDサイクルを通じてその新関数の信頼性を完全に保証する。
-4.  その後初めて、`qp_sin`の`dependencies`にその新関数を追加し、`qp_sin`の実装を開始する。
+1. その共通処理を、適切なレベル（例：`LV3`）の**新しい独立した関数モジュール**として定義する。
+2. その新関数のためのテストケースと神託（Oracle）を実装する。
+3. TDDサイクルを通じてその新関数の信頼性を完全に保証する。
+4. その後初めて、`qp_sin`の`dependencies`にその新関数を追加し、`qp_sin`の実装を開始する。
 
 このプロセスにより、ライブラリは常にその内部構造の論理的整合性と信頼性を保ちながら、有機的に成長することができる。
 
@@ -138,9 +138,9 @@ $$\sin(x) = x - \frac{x^3}{3!} + \frac{x^5}{5!} - \frac{x^7}{7!} + \dots$$
 
 すべてのテストケースは、その目的の明確化のため、以下の3階層（Tier）のいずれかに属する。
 
-  * **Tier 1 (厳密精度):** `f32`で正確に表現可能な値（整数、2のべき乗の分数など）を用い、理論的に完璧な結果との比較を行う。
-  * **Tier 2 (実用精度):** `π`や`0.1`など、`f32`では不正確となるが実用上頻出する値を用い、現実的な使用場面での精度を検証する。
-  * **Tier 3 (ストレス):** `NaN`, `Infinity`, `f32`の最大・最小値などの極値・特殊値を用い、極限条件での堅牢性を検証する。
+* **Tier 1 (厳密精度):** `f32`で正確に表現可能な値（整数、2のべき乗の分数など）を用い、理論的に完璧な結果との比較を行う。
+* **Tier 2 (実用精度):** `π`や`0.1`など、`f32`では不正確となるが実用上頻出する値を用い、現実的な使用場面での精度を検証する。
+* **Tier 3 (ストレス):** `NaN`, `Infinity`, `f32`の最大・最小値などの極値・特殊値を用い、極限条件での堅牢性を検証する。
 
 ###### **3.5.2. ポリシーに準拠した体系的な値選択ロジック**
 
@@ -160,30 +160,30 @@ $$\sin(x) = x - \frac{x^3}{3!} + \frac{x^5}{5!} - \frac{x^7}{7!} + \dots$$
 
 ### **第II部：API仕様とデータ構造**
 
-#### **4. 信頼性の階層モデル (v2.0) と関数カタログ**
+#### **4. 信頼性の階層モデルと関数カタログ**
 
 本ライブラリのAPI群は、その依存関係に基づき、厳格な階層モデル（LV）に従って構成される。下位の階層の信頼性が、その上位の階層の信頼性を再帰的に保証する。この構造は、ライブラリのディレクトリ構造そのものに反映される。
 
 ##### **4.1. 階層の定義と責務**
 
-  * **LV0: 検証の公理 (Axiom of Verification)**
-      * **責務:** 検証の絶対基準。CPU側で実行。
-  * **LV1: デバッグ API (Debug API)**
-      * **責務:** 内部状態を判定する最も基本的なGPU関数。
-  * **LV2: 誤差なし変換プリミティブ (EFT Primitives)**
-      * **責務:** すべての算術演算の精度を保証する数学的基礎部品。
-  * **LV3: 基本演算 API (Basic Arithmetic API)**
-      * **責務:** LV2を利用して四則演算と基本変換、単純な数学関数を実現する。
-  * **LV4: 拡張数学・比較 API (Extended Math & Comparison API)**
-      * **責務:** LV3までを組み合わせて、複雑な数学関数や比較演算を実装する。
-  * **LV5+: 応用 API (Applied APIs)**
-      * **責務:** LV4までを利用して高レベル機能を提供する。
+* **LV0: 検証の公理 (Axiom of Verification)**
+  * **責務:** 検証の絶対基準。CPU側で実行。
+* **LV1: デバッグ API (Debug API)**
+  * **責務:** 内部状態を判定する最も基本的なGPU関数。
+* **LV2: 誤差なし変換プリミティブ (EFT Primitives)**
+  * **責務:** すべての算術演算の精度を保証する数学的基礎部品。
+* **LV3: 基本演算 API (Basic Arithmetic API)**
+  * **責務:** LV2を利用して四則演算と基本変換、単純な数学関数を実現する。
+* **LV4: 拡張数学・比較 API (Extended Math & Comparison API)**
+  * **責務:** LV3までを組み合わせて、複雑な数学関数や比較演算を実装する。
+* **LV5+: 応用 API (Applied APIs)**
+  * **責務:** LV4までを利用して高レベル機能を提供する。
 
 -----
 
 ##### **4.2. LV1: デバッグと堅牢性API (`qp_debug_`)**
 
-  * **依存関係:** LV0
+* **依存関係:** LV0
 
 | 関数名 | シグネチャ | 説明 |
 | :--- | :--- | :--- |
@@ -195,7 +195,7 @@ $$\sin(x) = x - \frac{x^3}{3!} + \frac{x^5}{5!} - \frac{x^7}{7!} + \dots$$
 
 ##### **4.3. LV2: 誤差なし変換プリミティブ (EFT Primitives)**
 
-  * **依存関係:** LV0
+* **依存関係:** LV0
 
 | 関数名 | シグネチャ | 説明 |
 | :--- | :--- | :--- |
@@ -207,7 +207,7 @@ $$\sin(x) = x - \frac{x^3}{3!} + \frac{x^5}{5!} - \frac{x^7}{7!} + \dots$$
 
 ##### **4.4. LV3: 基本演算 API (`qp_`)**
 
-  * **依存関係:** LV0, LV1, LV2
+* **依存関係:** LV0, LV1, LV2
 
 | 関数名 | シグネチャ | 説明 |
 | :--- | :--- | :--- |
@@ -225,7 +225,7 @@ $$\sin(x) = x - \frac{x^3}{3!} + \frac{x^5}{5!} - \frac{x^7}{7!} + \dots$$
 
 ##### **4.5. LV4: 拡張数学・比較 API (`qp_`)**
 
-  * **依存関係:** LV0 - LV3
+* **依存関係:** LV0 - LV3
 
 | 関数名 | シグネチャ | 説明 |
 | :--- | :--- | :--- |
@@ -250,7 +250,7 @@ $$\sin(x) = x - \frac{x^3}{3!} + \frac{x^5}{5!} - \frac{x^7}{7!} + \dots$$
 
 ##### **4.6. LV5+: 応用 API**
 
-  * **依存関係:** LV0 - LV4
+* **依存関係:** LV0 - LV4
 
 ###### **4.6.1. 線形代数API (`qla_`)**
 
@@ -315,35 +315,38 @@ $$\sin(x) = x - \frac{x^3}{3!} + \frac{x^5}{5!} - \frac{x^7}{7!} + \dots$$
 
 ###### **6.1. TDD契約：Red/Greenカーネルの実装**
 
-  * **`main_red`カーネル**: **いかなる入力に対しても必ず失敗する**ように実装しなければならない。期待値と一致する可能性が極めて低い、固定の不正値（例：`vec4<f32>(-999.0)`）を返すことを推奨する。
-  * **`main_green`カーネル**: 正しい計算結果を返す、製品版の実装である。
+* **`main_red`カーネル**: **いかなる入力に対しても必ず失敗する**ように実装しなければならない。期待値と一致する可能性が極めて低い、固定の不正値（例：`vec4<f32>(-999.0)`）を返すことを推奨する。
+* **`main_green`カーネル**: 正しい計算結果を返す、製品版の実装である。
 
 ###### **6.2. バッファインターフェース規約**
 
 すべてのカーネルは、以下の汎用的なインターフェースを厳守しなければならない。
 
-  * **入力**: `@group(0) @binding(0) var<storage, read> generic_input: array<f32>;`
-  * **出力**: `@group(0) @binding(1) var<storage, read_write> generic_output: vec4<f32>;`
+* **入力**: `@group(0) @binding(0) var<storage, read> generic_input: array<f32>;`
+* **出力**: `@group(0) @binding(1) var<storage, read_write> generic_output: vec4<f32>;`
 
 ###### **6.3. 解決済みの課題と実装パターン**
 
 過去のデバッグで得られた知見であり、すべての開発者はこれらのパターンに従うことで、既知の問題を完全に回避しなければならない。
 
-1.  **`struct`ラップの禁止:** バッファ変数は`struct`でラップせず、必ずグローバルスコープで直接型定義すること。
-2.  **特殊値の扱い:** テストフレームワークがデータ転送を完全にハンドリングするため、WGSLカーネルは`NaN`, `Infinity`, `+/-0`を直接入力として受け取れる。`isNan()`のようなWGSL組込み関数を適切に利用すること。
-3.  **文法:** 変数は一行に一つずつ宣言する (`var a, b: f32;` は不可)。
+1. **`struct`ラップの禁止:** バッファ変数は`struct`でラップせず、必ずグローバルスコープで直接型定義すること。
+2. **特殊値の扱い:** テストフレームワークがデータ転送を完全にハンドリングするため、WGSLカーネルは`NaN`, `Infinity`, `+/-0`を直接入力として受け取れる。`isNan()`のようなWGSL組込み関数を適切に利用すること。
+3. **文法:** 変数は一行に一つずつ宣言する (`var a, b: f32;` は不可)。
 
 #### **7. クックブック (Cookbook: Usage Examples)**
 
 *新規参画者がライブラリの利用方法を迅速に習得できるよう、具体的な使用例を提供する。「生きたドキュメント」として機能する。*
 
-  * **01: ベクトルの内積**
+* **01: ベクトルの内積**
+
     ```wgsl
     // WGSLカーネル内
     // var v1, v2: QVector; (CPUからデータ設定済みと仮定)
     var dot_product: QuadFloat = qla_vec_dot(v1, v2);
     ```
-  * **02: 3x3行列の固有値計算**
+
+* **02: 3x3行列の固有値計算**
+
     ```wgsl
     // WGSLカーネル内
     // var matrix: QMatrix; (CPUからデータ設定済みと仮定)
@@ -361,5 +364,5 @@ $$\sin(x) = x - \frac{x^3}{3!} + \frac{x^5}{5!} - \frac{x^7}{7!} + \dots$$
 
 ライブラリは、内部的にWGSLを完全にラッピングするラッパー・パターンを採用する。
 
-  * **エンジン層 (WGSL):** 本仕様書で定義される全ての`qp_`, `qla_`等の関数。GPU上で実際の高精度計算を実行する。
-  * **ラッパー層 (JS/TS):** 開発者が直接利用するAPI。WebGPUの初期化、バッファ管理、データ変換、非同期処理の管理など、全ての複雑な処理をカプセル化する。
+* **エンジン層 (WGSL):** 本仕様書で定義される全ての`qp_`, `qla_`等の関数。GPU上で実際の高精度計算を実行する。
+* **ラッパー層 (JS/TS):** 開発者が直接利用するAPI。WebGPUの初期化、バッファ管理、データ変換、非同期処理の管理など、全ての複雑な処理をカプセル化する。
